--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,40 @@
-pyqt
-numpy
-scipy
-pyqtgraph
-hdf5
-qtpy
-matplotlib
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: win-64
+certifi=2016.2.28=py36_0
+colorama=0.3.9=py36_0
+curl=7.45.0=vc14_1
+cycler=0.10.0=py36_0
+git=2.11.1=0
+hdf5=1.8.15.1=vc14_4
+icu=57.1=vc14_0
+jpeg=9b=vc14_0
+libnetcdf=4.3.3.1=vc14_5
+libpng=1.6.30=vc14_1
+matplotlib=2.0.2=np113py36_0
+mkl=2017.0.3=0
+netcdf4=1.2.4=np113py36_0
+numexpr=2.6.2=np113py36_0
+numpy=1.13.1=py36_0
+openssl=1.0.2l=vc14_0
+pip=9.0.1=py36_1
+py=1.4.34=py36_0
+pyparsing=2.2.0=py36_0
+pyqt=5.6.0=py36_2
+pyqtgraph=0.10.0=py36_0
+pytest=3.2.1=py36_0
+python=3.6.2=0
+python-dateutil=2.6.1=py36_0
+pytz=2017.2=py36_0
+qt=5.6.2=vc14_6
+qtpy=1.3.1=py36_0
+scipy=0.19.1=np113py36_0
+setuptools=36.4.0=py36_1
+sip=4.18=py36_0
+six=1.10.0=py36_0
+tk=8.5.18=vc14_0
+vc=14=0
+vs2015_runtime=14.0.25420=0
+wheel=0.29.0=py36_0
+wincertstore=0.2=py36_0
+zlib=1.2.11=vc14_0
